# splitflap

./: .gitignore  asciiartcats.txt  asciiartrobots.txt  sign.txt
python/: splitflap_board.py
pythonmac/: splitflap_board.py
signs/: coffeesign.txt
splitflap-cyd/: README.md  splitflap-cyd.ino  tft_setup.h
splitflap-mac/: Package.swift  README.md  start.sh
splitflap-mac/Sources/splitflap-mac/: BoardModel.swift  BoardView.swift  ClatterAudio.swift  FlapRenderer.swift  SplitflapApp.swift
splitflap-rs/: Cargo.toml  README.md  build.zig
splitflap-rs/.zig-cache/o/5354bf96677042323214c268f9ac5a85/: cimport.zig
splitflap-rs/.zig-cache/o/b57832f16646be52c67f9ab5d1332fe0/: splitflap_board
splitflap-rs/.zig-cache/o/d4adb831bfc4ff0d2161e5d22f09050d/: cimport.zig
splitflap-rs/autostart/: splitflap.desktop
splitflap-rs/src/: main.rs  main.zig
splitflap-rs/systemd/: splitflap.service
splitflap-site/: .dev.vars.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  vercel.json  worker.ts  wrangler.jsonc
splitflap-site/app/: globals.css  layout.js  page.js
splitflap-site/app/_lib/: api.js  timezones.js
splitflap-site/app/api/gists/: route.js
splitflap-site/app/api/login/: route.js
splitflap-site/app/api/settings/: route.js
splitflap-site/app/api/signboards/: route.js
splitflap-site/app/board/[id]/: page.js
splitflap-site/lib/: auth.js  db.js  env.js  github.js  guard.js  meetup.js  render.js  rotate.js  store.js
splitflap-site/migrations/: 0001_init.sql  0002_add_timezone.sql
(+9 files in other folders)
