[package]
name = "splitflap_board"
version = "0.1.0"
edition = "2021"
description = "Full-screen split-flap (airport-style) text board for Raspberry Pi"

[dependencies]
sdl2 = { version = "0.37", features = ["ttf"] }
ureq = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
